--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="./js/variables.js" defer></script>
+    <script src="./js/asideCards.js" defer></script>
     <script src="./js/flip.js" defer></script>
     <script src="./js/contador.js" defer></script>
     <script src="./js/comparador.js" defer></script>
