--- a/index.html
+++ b/index.html
@@ -1,26 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="./js/variables.js" defer></script>
     <script src="./js/asideCards.js" defer></script>
     <script src="./js/flip.js" defer></script>
     <script src="./js/contador.js" defer></script>
     <script src="./js/comparador.js" defer></script>
     <script src="./js/inicio.js" defer></script>
+    <script src="./js/chronometer.js" defer></script>
 
-</head>
-<body>
-<main>
-    <h3>Score:<span  data-function="score">0</span></h3>
-    <h3>Attempts:<span class="spanAttempts"  data-function="attempts">0</span></h3>
+  </head>
+  <body>
 
-    <div data-function="grid" class="b-grid mesa"></div>
-</main>
-</body>
+    <main>
+      <nav class="navbar">
+        <div class="nav-section">
+          <h3>Score:<span data-function="score">0</span></h3>
+          <h3>
+            Attempts:<span class="spanAttempts" data-function="attempts">0</span>
+          </h3>
+              <!-- Add more sections as needed -->
+              <h3>Chronometer: <span data-function="chronometer">00:00</span></h3>
+        </div>
+        <div data-function="cardsReady" class="cardsReady"></div>
+      </nav>
+      <div data-function="grid" class="b-grid mesa"></div>
+    </main>
+  </body>
 </html>
