--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="anime.min.js"></script>
     <script src="./js/variables.js" defer></script>
+    <script src="./js/endGame.js" defer></script>
     <script src="./js/asideCards.js" defer></script>
     <script src="./js/flip.js" defer></script>
     <script src="./js/contador.js" defer></script>
     <script src="./js/comparador.js" defer></script>
-    <script src="./js/inicio.js" defer></script>
     <script src="./js/chronometer.js" defer></script>
+    <script src="./js/inicio.js" defer></script>
 
   </head>
   <body>
